# cv-analyzer

./: .gitignore  ai.py  analise.py  app.py  authenticate.py  create_job.py  database.py  db.json  download_cv.py  git-error-1740081216212  helper.py  pyproject.toml  requirements.txt
models/: analysis.py  resum.py
